<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/JZlevel_values"
        android:entryValues="@array/JZlevel_values"
        android:key="JZLevel"
        android:positiveButtonText="@string/global_ok"
        android:title="@string/JZ_level" />

    <ListPreference
        android:entries="@array/timer_values"
        android:entryValues="@array/timer_values"
        android:key="timer"
        android:positiveButtonText="@string/global_ok"
        android:title="@string/timer" />

    <ListPreference
        android:entries="@array/SKZYLevel_values"
        android:entryValues="@array/SKZYLevel_values"
        android:key="SKZYLevel"
        android:positiveButtonText="@string/global_ok"
        android:title="@string/SKZY_level" />


    <ListPreference
        android:entries="@array/key_use_values"
        android:entryValues="@array/key_use_values"
        android:key="key_A"
        android:positiveButtonText="@string/global_ok"
        android:title="@string/key_A" />

    <ListPreference
        android:entries="@array/key_use_values"
        android:entryValues="@array/key_use_values"
        android:key="key_B"
        android:positiveButtonText="@string/global_ok"
        android:title="@string/key_B" />

    <ListPreference
        android:entries="@array/key_use_values"
        android:entryValues="@array/key_use_values"
        android:key="key_C"
        android:positiveButtonText="@string/global_ok"
        android:title="@string/key_C" />

    <ListPreference
        android:entries="@array/key_use_values"
        android:entryValues="@array/key_use_values"
        android:key="key_D"
        android:positiveButtonText="@string/global_ok"
        android:title="@string/key_D" />

    <SwitchPreference
        android:key="power_saving"
        android:title="电池省电功能开启"/>

    <SwitchPreference
        android:key="id_recognition"
        android:title="PTT ID识别键音开启"/>

</PreferenceScreen>