<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewChannelNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/channel_nickname" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewChannelSpacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/channel_spacing" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewPowerLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/power_level" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewFirstScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/first_scan" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewScanList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/scan_list" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewValid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:canNav="true"
            app:title="@string/valid" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewPTTId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:canNav="true"
            app:title="@string/PTT_id" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewChoiceCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:canNav="true"
            app:title="@string/choice_call" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewBusyDeny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:canNav="true"
            app:title="@string/busy_deny" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewInterfere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:canNav="true"
            app:isBottom="true"
            app:title="@string/interfere" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewReceiveRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:subject="接收"
            app:title="@string/rate" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewReceiveCTCSSType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/CTCSS_type" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewReceiveCTCSSRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/CTCSS_rate" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewReceiveCTCSSCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isBottom="true"
            app:title="@string/CTCSS_code" />


        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewLaunchRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:subject="发射"
            app:title="@string/rate" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewLaunchCTCSSType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/CTCSS_type" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewLaunchCTCSSRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/CTCSS_rate" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewLaunchCTCSSCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isBottom="true"
            app:title="@string/CTCSS_code" />


    </LinearLayout>


</ScrollView>