<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewLaunchSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/launch_speed" />


        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewFirstLaunchDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/first_launch_delay" />


        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewFirstLaunchTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/first_launch_time" />


        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewCallCode1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/call_code_1" />


        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewCallCode2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/call_code_2" />


        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewCallCode3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/call_code_3" />


        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewPTTIdCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/PTT_id_code" />


    </LinearLayout>

</ScrollView>