<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewPersonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/person_id" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewTeamId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/team_id" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewGroupId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/group_id" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewYBCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/YB_code" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewYYCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/YY_code" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewReviveCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/revive_code" />
    </LinearLayout>

</ScrollView>