<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewScanSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/scan_setting" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewScanList1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/scan_list_1" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewScanList2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/scan_list_2" />

        <com.zbw.interphone.view.LineSettingView
            android:id="@+id/viewScanList3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/scan_list_3" />

    </LinearLayout>

</ScrollView>